--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,3 @@
-/* *
-html,
-body
-{
-  overflow: hidden;
-} */
-
 canvas {
   position: fixed;
   top: 0;
@@ -12,14 +5,16 @@ canvas {
 }
 
 :root {
-  /* --dark-bg: rgba(15, 15, 15, 0.95); */
-  --dark-bg: rgba(33, 67, 110, 0.7);
-  /* --font-color: rgba(255,255,255, 0.8) */
+  --dark-bg: rgba(33, 67, 110, 0.75);
   --spacing: 200px;
 
-  font-family: brandon-grotesque, sans-serif;
-  font-weight: 400;
+  font-family: sans-serif;
+  font-weight: normal;
   font-style: normal;
+}
+
+h1, h2, h3, blockquote {
+  font-weight: bold;
 }
 
 main {
@@ -28,57 +23,41 @@ main {
   z-index: 99;
   position: absolute;
   width: 100%;
-  margin: 0px auto;
-  padding: 100px 0px;
+  padding: 10vh 2vw;
   
   display: grid;
-  /* grid-template-columns: repeat(12, 1fr); */
   grid-template-columns: 2fr 6fr 2fr;
-}
-
-h1, h2, h3, blockquote {
-  font-family: elevon, sans-serif;
-  font-weight: 700;
-  font-style: normal;
 }
 
 header {
   color: rgba(255, 193, 36,0.9);
-  background-color: rgba(33, 67, 110, 0.75);
+  background-color: var(--dark-bg);
   text-align: center;
-  /* grid-column: 2 / span 5; */
   grid-column: 2;
   font-size: 2.5rem;
-  /* padding: 1.5rem 1.5rem 0.5rem; */
-  margin-bottom: 200px;
+  margin-bottom: 40vh;
 }
 
 section {
-  /* grid-column: 2 / 8; */
   grid-column: 2;
   padding: 1rem;
   background: var(--dark-bg);
   font-size: 1.25rem;
   line-height: 1.5;
-  margin-bottom: 120px;
+  margin-bottom: 15vh;
 }
 
 blockquote {
-  margin: 0;
-  padding: 0;
   grid-column: 2;
+  margin: auto;
+  width: 70%;
   margin-bottom: var(--spacing);
 }
 
 blockquote p {
-  /* color: rgba(255, 193, 36,0.9);
-  background-color: rgba(33, 67, 110, 0.75); */
   background: var(--dark-bg);
   font-size: 4rem;
-  display: inline;
+  padding: 2rem;
+  text-align: center;
   line-height: 1;
 }
-
-/* .left {
-  grid-column: 6 / 12;
-} */
